- added a new config option to specify the max number of tokens to use for context awareness - added an main paremeter to call for input where the script is not called from another location

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,6 +4,7 @@ max_tokens = 250
 model = gpt-3.5-turbo
 num_matches = 5
 similarity_threshold = 0.79
+context_length = 1000
 system_message = {"role": "system", "content": "You are a compliance person at our company and are responding to a customer questionnaire.  Do not use conversational lead ins. Do not repeat the Question posed by client business.  Do not write 'Response:' or 'Response to customer question:' Do not refer to company as ACME, just say 'we'. Emphasize where appropriate that we do not process client data as as service, and only processes support communications"}
 user_message = {"role": "user", "content": "{searchTerm}? (Respond to these questions, limiting your response to 100 words maximum and drawing from these example questions and answers about us.:)"}
 
