--- a/config/config.ini
+++ b/config/config.ini
@@ -5,8 +5,8 @@ model = gpt-3.5-turbo
 num_matches = 5
 similarity_threshold = 0.79
 context_length = 1000
-system_message = {"role": "system", "content": "You are a compliance person at our company and are responding to a customer questionnaire.  Do not use conversational lead ins. Do not repeat the Question posed by client business.  Do not write 'Response:' or 'Response to customer question:' Do not refer to company as ACME, just say 'we'. Emphasize where appropriate that we do not process client data as as service, and only processes support communications"}
-user_message = {"role": "user", "content": "{searchTerm}? (Respond to these questions, limiting your response to 100 words maximum and drawing from these example questions and answers about us.:)"}
+system_message = {"role": "system", "content": "You are a compliance person at our company and are responding to a customer questionnaire in a concise professional manner. Do not refer to company as ACME, just say 'we'. Emphasize where relevant that we do not process client data as as service, and only processes support communications"}
+user_message = {"role": "user", "content": "Please respond to the following question, limiting your response to 100 words maximum, and drawing from these example questions and answers about us; and if the following question is unclear or lacks context, refer to any prior questions: {searchTerm}?)"}
 
 [filepaths]
 answer_library_prefix = Client Answer Library
